<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFFFF" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/history">
   <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android" android:textSize="20sp" android:fontFamily="sans-serif-medium" android:textStyle="normal" android:background="#FF3F51B5" app:titleTextColor="#FFFFFFFF" app:title="History" android:theme="@style/app_bar_style" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/app_bar"/>
   <ScrollView android:fillViewport="true" android:layout_height="match_parent" android:layout_width="match_parent">
      <android.support.percent.PercentRelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
         <com.example.androidapp.shakyaruja.itsdc.elements.historyactivity.ScrollView1 android:background="#FFEEEEEE" android:fillViewport="true" android:scrollbars="vertical" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/scroll_view16">
            <android.support.percent.PercentRelativeLayout android:layout_height="match_parent" android:layout_width="wrap_content">
               <com.example.androidapp.shakyaruja.itsdc.elements.historyactivity.View1 android:background="#FFFFFFFF" app:layout_marginTopPercent="0.999999977648%" app:layout_marginStartPercent="0.999999977648%" app:layout_widthPercent="98.000001907349%" android:layout_width="0dp" app:layout_heightPercent="20.999999344349%" android:layout_height="0dp" android:id="@+id/view13">
                  <android.support.v7.widget.AppCompatTextView android:lineSpacingMultiplier="1" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:ellipsize="end" android:maxLines="1" android:textColor="#FF000000" android:cropToPadding="true" android:letterSpacing="0" android:background="#00000000" android:gravity="center|start" android:text="@string/text_view1_text6" android:outlineProvider="bounds" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="0%" app:layout_widthPercent="30.000001192093%" android:layout_width="0dp" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" android:id="@+id/text_view16"/>
                  <android.support.v7.widget.AppCompatTextView android:gravity="center|start" android:ellipsize="end" android:maxLines="1" android:textColor="#FF000000" android:letterSpacing="0" android:cropToPadding="true" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:background="#00000000" android:lineSpacingMultiplier="1" android:text="@string/text_view2_text4" android:outlineProvider="bounds" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="50.499999523163%" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" app:layout_widthPercent="30.000001192093%" android:layout_width="0dp" android:id="@+id/text_view24"/>
                  <android.support.v7.widget.AppCompatTextView android:textColor="#FF000000" android:letterSpacing="0" android:cropToPadding="true" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:gravity="center|start" android:lineSpacingMultiplier="1" android:ellipsize="end" android:maxLines="1" android:background="#00000000" android:text="@string/text_view3_text2" android:outlineProvider="bounds" app:layout_marginTopPercent="25.249999761581%" app:layout_marginStartPercent="0%" app:layout_widthPercent="30.000001192093%" android:layout_width="0dp" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" android:id="@+id/text_view32"/>
                  <android.support.v7.widget.AppCompatTextView android:letterSpacing="0" android:ellipsize="end" android:maxLines="1" android:cropToPadding="true" android:textColor="#FF000000" android:background="#00000000" android:lineSpacingMultiplier="1" android:gravity="center|start" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:text="@string/text_view4_text1" android:outlineProvider="bounds" app:layout_marginTopPercent="0%" app:layout_marginStartPercent="30.000001192093%" app:layout_widthPercent="69.999998807907%" android:layout_width="0dp" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" android:id="@+id/text_view41"/>
                  <android.support.v7.widget.AppCompatTextView android:letterSpacing="0" android:textColor="#FF000000" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:lineSpacingMultiplier="1" android:background="#00000000" android:cropToPadding="true" android:gravity="center|start" android:ellipsize="end" android:maxLines="1" android:text="@string/text_view5_text1" android:outlineProvider="bounds" app:layout_marginStartPercent="30.000001192093%" app:layout_marginTopPercent="25.249999761581%" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" app:layout_widthPercent="69.999998807907%" android:layout_width="0dp" android:id="@+id/text_view51"/>
                  <android.support.v7.widget.AppCompatTextView android:ellipsize="end" android:maxLines="1" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:letterSpacing="0" android:lineSpacingMultiplier="1" android:textColor="#FF000000" android:gravity="center|start" android:background="#00000000" android:cropToPadding="true" android:text="@string/text_view6_text" android:outlineProvider="bounds" app:layout_marginStartPercent="30.000001192093%" app:layout_marginTopPercent="50.499999523163%" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" app:layout_widthPercent="69.999998807907%" android:layout_width="0dp" android:id="@+id/text_view6"/>
                  <android.support.v7.widget.AppCompatTextView android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:lineSpacingMultiplier="1" android:ellipsize="end" android:maxLines="1" android:cropToPadding="true" android:gravity="center|start" android:textColor="#FF000000" android:letterSpacing="0" android:background="#00000000" android:text="@string/text_view7_text" android:outlineProvider="bounds" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="75.749999284744%" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" app:layout_widthPercent="30.000001192093%" android:layout_width="0dp" android:id="@+id/text_view7"/>
                  <android.support.v7.widget.AppCompatTextView android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:textColor="#FF000000" android:lineSpacingMultiplier="1" android:gravity="center|start" android:background="#00000000" android:ellipsize="end" android:maxLines="1" android:letterSpacing="0" android:cropToPadding="true" android:text="@string/text_view8_text" android:outlineProvider="bounds" app:layout_marginTopPercent="75.749999284744%" app:layout_marginStartPercent="30.000001192093%" app:layout_widthPercent="69.999998807907%" android:layout_width="0dp" app:layout_heightPercent="24.250000715256%" android:layout_height="0dp" android:id="@+id/text_view8"/>
               </com.example.androidapp.shakyaruja.itsdc.elements.historyactivity.View1>
            </android.support.percent.PercentRelativeLayout>
         </com.example.androidapp.shakyaruja.itsdc.elements.historyactivity.ScrollView1>
      </android.support.percent.PercentRelativeLayout>
   </ScrollView>
</LinearLayout>
