<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFFFF" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/reedem">
   <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android" android:textSize="20sp" android:fontFamily="sans-serif-medium" android:textStyle="normal" android:background="#FF3F51B5" app:title="Reedem" app:titleTextColor="#FFFFFFFF" android:theme="@style/app_bar_style4" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/app_bar4"/>
   <ScrollView android:fillViewport="true" android:layout_height="match_parent" android:layout_width="match_parent">
      <android.support.percent.PercentRelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
         <android.support.v7.widget.AppCompatTextView android:ellipsize="end" android:maxLines="1" android:letterSpacing="0" android:lineSpacingMultiplier="1" android:background="#00000000" android:textColor="#FF000000" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:cropToPadding="true" android:gravity="center|end" android:text="@string/text_view1_text3" android:outlineProvider="bounds" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="0.999999977648%" app:layout_widthPercent="61.000001430511%" android:layout_width="0dp" app:layout_heightPercent="5.000000074506%" android:layout_height="0dp" android:id="@+id/text_view13"/>
         <android.support.v7.widget.AppCompatTextView android:gravity="center|start" android:lineSpacingMultiplier="1" android:textColor="#FF000000" android:letterSpacing="0" android:background="#00000000" android:ellipsize="end" android:maxLines="1" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:cropToPadding="true" android:text="@string/text_view2_text2" android:outlineProvider="bounds" app:layout_marginStartPercent="62.000000476837%" app:layout_marginTopPercent="0.999999977648%" app:layout_widthPercent="20.000000298023%" android:layout_width="0dp" app:layout_heightPercent="5.000000074506%" android:layout_height="0dp" android:id="@+id/text_view22"/>
         <android.support.v7.widget.AppCompatButton android:cropToPadding="true" android:letterSpacing="0" android:background="#FF3F51B5" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:textColor="#FFFFFFFF" android:gravity="center|center" android:text="@string/text_button1_text" app:layout_marginStartPercent="25%" app:layout_marginTopPercent="10.000000149012%" app:layout_widthPercent="50%" android:layout_width="0dp" app:layout_heightPercent="7.000000029802%" android:layout_height="0dp" android:id="@+id/text_button1"/>
      </android.support.percent.PercentRelativeLayout>
   </ScrollView>
</LinearLayout>
