<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFFFF" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/donate">
   <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FF3F51B5" android:textSize="20sp" android:fontFamily="sans-serif-medium" android:textStyle="normal" app:title="Donate" app:titleTextColor="#FFFFFFFF" android:theme="@style/app_bar_style3" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/app_bar3"/>
   <ScrollView android:fillViewport="true" android:layout_height="match_parent" android:layout_width="match_parent">
      <android.support.percent.PercentRelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
         <com.example.androidapp.shakyaruja.itsdc.elements.donateactivity.ScrollView1 android:background="#FFEEEEEE" android:fillViewport="true" android:scrollbars="vertical" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/scroll_view13">
            <android.support.percent.PercentRelativeLayout android:layout_height="match_parent" android:layout_width="wrap_content">
               <android.support.v7.widget.AppCompatTextView android:lineSpacingMultiplier="1" android:textColor="#FF000000" android:background="#00000000" android:letterSpacing="0" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:gravity="top|center" android:cropToPadding="true" android:ellipsize="end" android:maxLines="10" android:text="@string/text_view2_text3" android:outlineProvider="bounds" app:layout_marginStartPercent="15.000000596046%" app:layout_marginTopPercent="21.999999880791%" app:layout_widthPercent="50%" android:layout_width="0dp" app:layout_heightPercent="3.999999910593%" android:layout_height="0dp" android:id="@+id/text_view23"/>
               <android.support.v7.widget.AppCompatTextView android:cropToPadding="true" android:textColor="#FF000000" android:background="#00000000" android:lineSpacingMultiplier="1" android:gravity="top|start" android:letterSpacing="0" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:ellipsize="end" android:maxLines="10" android:text="@string/text_view3_text1" android:outlineProvider="bounds" app:layout_marginStartPercent="56.000000238419%" app:layout_marginTopPercent="21.999999880791%" app:layout_heightPercent="3.999999910593%" android:layout_height="0dp" app:layout_widthPercent="20.000000298023%" android:layout_width="0dp" android:id="@+id/text_view31"/>
            </android.support.percent.PercentRelativeLayout>
         </com.example.androidapp.shakyaruja.itsdc.elements.donateactivity.ScrollView1>
         <android.support.v7.widget.AppCompatImageView android:background="#FFFFFFFF" android:src="@drawable/river_menu_icon" android:scaleType="centerInside" app:layout_marginStartPercent="25%" app:layout_marginTopPercent="0.999999977648%" app:layout_widthPercent="50%" android:layout_width="0dp" app:layout_heightPercent="20.000000298023%" android:layout_height="0dp" android:id="@+id/image_view11"/>
         <android.support.v7.widget.AppCompatButton android:gravity="center|center" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:background="#FF3F51B5" android:letterSpacing="0" android:textColor="#FFFFFFFF" android:cropToPadding="true" android:text="@string/text_button1_text1" app:layout_marginStartPercent="15.000000596046%" app:layout_marginTopPercent="25.999999046326%" app:layout_widthPercent="69.999998807907%" android:layout_width="0dp" app:layout_heightPercent="7.999999821186%" android:layout_height="0dp" android:id="@+id/text_button11"/>
         <android.support.v7.widget.AppCompatTextView android:background="#00000000" android:gravity="top|start" android:ellipsize="end" android:maxLines="10" android:textColor="#FF000000" android:cropToPadding="true" android:lineSpacingMultiplier="1" android:letterSpacing="0" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:text="@string/text_view1_text4" android:outlineProvider="bounds" app:layout_marginStartPercent="5.99999986589%" app:layout_marginTopPercent="36.000001430511%" app:layout_widthPercent="89.999997615814%" android:layout_width="0dp" app:layout_heightPercent="23.000000417233%" android:layout_height="0dp" android:id="@+id/text_view14"/>
      </android.support.percent.PercentRelativeLayout>
   </ScrollView>
</LinearLayout>
