<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/tools"
    android:background="#FFEEEEEE"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/home">

   <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android" android:textSize="20sp" android:fontFamily="sans-serif-medium" android:textStyle="normal" app:title="Home" app:titleTextColor="#FFFFFFFF" android:background="#FF3F51B5" android:theme="@style/app_bar_style8" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/app_bar8"/>

   <android.support.percent.PercentRelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
      <com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.ScrollView1 android:background="#FFEEEEEE" android:fillViewport="true" android:scrollbars="vertical" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/scroll_view15">
         <android.support.percent.PercentRelativeLayout android:layout_height="match_parent" android:layout_width="wrap_content">
            <com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View1 android:background="#FFFFFFFF" app:layout_marginStartPercent="1.999999955297%" app:layout_marginTopPercent="1.999999955297%" app:layout_heightPercent="21.999999880791%" android:layout_height="0dp" app:layout_widthPercent="46.999999880791%" android:layout_width="0dp" android:id="@+id/view12">
               <android.support.v7.widget.AppCompatImageButton android:scaleType="centerInside" android:src="@drawable/helplines" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:background="#FFFFFFFF" app:layout_marginTopPercent="0%" app:layout_marginStartPercent="0%" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:layout_width="match_parent" android:id="@+id/image_button12"/>
               <android.support.v7.widget.AppCompatButton android:textColor="#FFFFFFFF" android:background="#FF3F51B5" android:cropToPadding="true" android:letterSpacing="0" android:gravity="center|center" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:text="@string/text_button1_text2" app:layout_marginTopPercent="69.999998807907%" app:layout_marginStartPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="30.000001192093%" android:layout_height="0dp" android:id="@+id/text_button12"/>
            </com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View1>
            <com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View2 android:background="#FFFFFFFF" app:layout_marginStartPercent="50.999999046326%" app:layout_marginTopPercent="1.999999955297%" app:layout_widthPercent="46.999999880791%" android:layout_width="0dp" app:layout_heightPercent="21.999999880791%" android:layout_height="0dp" android:id="@+id/view21">
               <android.support.v7.widget.AppCompatImageButton android:src="@drawable/news" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:scaleType="centerInside" android:background="#FFFFFFFF" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button21"/>
               <android.support.v7.widget.AppCompatButton android:textColor="#FFFFFFFF" android:cropToPadding="true" android:background="#FF3F51B5" android:gravity="center|center" android:letterSpacing="0" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:text="@string/text_button2_text" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="69.999998807907%" android:layout_width="match_parent" app:layout_heightPercent="30.000001192093%" android:layout_height="0dp" android:id="@+id/text_button2"/>

            </com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View2>
            <com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View3 android:background="#FFFFFFFF" app:layout_marginStartPercent="1.999999955297%" app:layout_marginTopPercent="25.999999046326%" app:layout_widthPercent="46.999999880791%" android:layout_width="0dp" app:layout_heightPercent="21.999999880791%" android:layout_height="0dp" android:id="@+id/view3">
               <android.support.v7.widget.AppCompatImageButton android:src="@drawable/history" android:scaleType="centerInside" android:background="#FFFFFFFF" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button3"/>
               <android.support.v7.widget.AppCompatButton android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:letterSpacing="0" android:gravity="center|center" android:cropToPadding="true" android:background="#FF3F51B5" android:textColor="#FFFFFFFF" android:text="@string/text_button3_text" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="69.999998807907%" app:layout_heightPercent="30.000001192093%" android:layout_height="0dp" android:layout_width="match_parent" android:id="@+id/text_button3"/>
            </com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View3>
            <com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View4 android:background="#FFFFFFFF" app:layout_marginTopPercent="25.999999046326%" app:layout_marginStartPercent="50.999999046326%" app:layout_widthPercent="46.999999880791%" android:layout_width="0dp" app:layout_heightPercent="21.999999880791%" android:layout_height="0dp" android:id="@+id/view4">
               <android.support.v7.widget.AppCompatImageButton android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:src="@drawable/places" android:background="#FFFFFFFF" android:scaleType="centerInside" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button4"/>
               <android.support.v7.widget.AppCompatButton android:cropToPadding="true" android:textColor="#FFFFFFFF" android:letterSpacing="0" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:background="#FF3F51B5" android:gravity="center|center" android:text="@string/text_button4_text" app:layout_marginTopPercent="69.999998807907%" app:layout_marginStartPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="30.000001192093%" android:layout_height="0dp" android:id="@+id/text_button4"/>
            </com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View4>
            <com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View5 android:background="#FFFFFFFF" app:layout_marginStartPercent="1.999999955297%" app:layout_marginTopPercent="50%" app:layout_widthPercent="46.999999880791%" android:layout_width="0dp" app:layout_heightPercent="21.999999880791%" android:layout_height="0dp" android:id="@+id/view5">
               <android.support.v7.widget.AppCompatImageButton android:scaleType="centerInside" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:background="#FFFFFFFF" android:src="@drawable/reedem" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button5"/>
               <android.support.v7.widget.AppCompatButton android:background="#FF3F51B5" android:letterSpacing="0" android:cropToPadding="true" android:textColor="#FFFFFFFF" android:gravity="center|center" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:text="@string/text_button5_text" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="69.999998807907%" android:layout_width="match_parent" app:layout_heightPercent="30.000001192093%" android:layout_height="0dp" android:id="@+id/text_button5"/>
            </com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View5>
            <com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View6 android:background="#FFFFFFFF" app:layout_marginStartPercent="50.999999046326%" app:layout_marginTopPercent="50%" app:layout_heightPercent="21.999999880791%" android:layout_height="0dp" app:layout_widthPercent="46.999999880791%" android:layout_width="0dp" android:id="@+id/view6">
               <android.support.v7.widget.AppCompatImageButton android:background="#FFFFFFFF" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:src="@drawable/cntct" android:scaleType="centerInside" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button6"/>
               <android.support.v7.widget.AppCompatButton android:textColor="#FFFFFFFF" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:background="#FF3F51B5" android:gravity="center|center" android:cropToPadding="true" android:letterSpacing="0" android:text="@string/text_button6_text" app:layout_marginTopPercent="69.999998807907%" app:layout_marginStartPercent="0%" android:layout_width="match_parent" app:layout_heightPercent="30.000001192093%" android:layout_height="0dp" android:id="@+id/text_button6"/>
            </com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.View6>
            <android.support.v7.widget.AppCompatButton android:letterSpacing="0" android:background="#FF3F51B5" android:textColor="#FFFFFFFF" android:cropToPadding="true" android:gravity="center|center" android:textSize="16sp" android:fontFamily="sans-serif" android:textStyle="normal" android:text="@string/text_button7_text" app:layout_marginStartPercent="1.999999955297%" app:layout_marginTopPercent="74.000000953674%" app:layout_widthPercent="95.999997854233%" android:layout_width="0dp" app:layout_heightPercent="7.999999821186%" android:layout_height="0dp" android:id="@+id/text_button7"/>

         </android.support.percent.PercentRelativeLayout>


      </com.example.androidapp.shakyaruja.itsdc.elements.homeactivity.ScrollView1>
   </android.support.percent.PercentRelativeLayout>
</LinearLayout>
